Added controller and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://postgrestekdev.cd6oucy10xvk.us-east-2.rds.amazonaws.com:5432/postgrestekdev
+spring.datasource.username=postgrestek
+spring.datasource.password=nbmax123
+spring.datasource.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+
+
 
